# OptimizedMG

./: GRADLE96_FIX_NOTES.txt  MANIFEST_FIX_NOTES.txt  NEON_PATCH_NOTES.txt  build.gradle  gradle.properties
.github/workflows/: .gitignore  BUILD_INSTRUCTIONS.md  README.md  android.yml  settings.gradle
.github/workflows/.androidide/editor/: openedFiles.json.bak
.github/workflows/app/src/main/: AndroidManifest.xml
.github/workflows/app/src/main/cpp/: CMakeLists.txt  PerformanceMonitor.cpp  PerformanceMonitor.h  main.cpp  native-lib.cpp
.github/workflows/app/src/main/cpp/math/: FastMath.h  exp_table.inl
.github/workflows/app/src/main/cpp/mobileglues/: OptimizedRenderer.h  ShaderManager.h  TextureCache.cpp  TextureCache.h
.github/workflows/app/src/main/java/com/optimizedmg/ui/: Theme.kt
.github/workflows/app/src/main/res/drawable/: ic_launcher_foreground.xml
.github/workflows/app/src/main/res/values/: strings.xml
.github/workflows/app/src/main/res/xml/: data_extraction_rules.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  QuaternionMath.cpp  ShaderManager.cpp  main.cpp  native-lib.cpp
app/src/main/cpp/MobileGlues-cpp/: CMakeLists.txt
app/src/main/cpp/MobileGlues-cpp/gl/glsl/: glsl_for_es_stub.cpp
app/src/main/cpp/MobileGlues-cpp/gles/: loader.cpp
app/src/main/cpp/MobileGlues-cpp/glx/: lookup.cpp
app/src/main/cpp/math/: MatrixMath.h  VectorMath.h  sin_table.inl
app/src/main/cpp/mobileglues/: OptimizedRenderer.cpp  OptimizedRenderer.h  ShaderManager.cpp  TextureCache.cpp
app/src/main/cpp/mobileglues-core/: CMakeLists.txt  includes.h
app/src/main/cpp/mobileglues-core/config/: settings.h
app/src/main/cpp/mobileglues-core/gl/: getter.cpp
app/src/main/cpp/mobileglues-core/glx/: lookup.cpp
app/src/main/cpp/mobileglues-core/include/glm/: glm.hpp
app/src/main/java/com/optimizedmg/: MainActivity.kt  MobileGluesLoader.kt
app/src/main/java/com/optimizedmg/core/: PerformanceMonitor.kt
app/src/main/java/com/optimizedmg/renderer/: OptimizedRenderer.kt
app/src/main/java/com/optimizedmg/ui/: MainScreen.kt  Theme.kt
app/src/main/res/values/: colors.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
